src/App.css
/* Estilos para a navegação */
.navbar {
  padding: 10px;
  text-align: center;
}

.navbar button {
  margin: 10px;
  padding: 10px 20px;
  background-color: #fff;
  color: #fbbc05;
  border: none;
  font-size: 20px;
  cursor: pointer;
}

.navbar button.active {
  background-color: #fbbc05;
  color: #fff;
}

/* Botão para adicionar nova nota */
.toAdd {
  position: absolute;
  bottom: 30px;
  right: 30px;
  margin: 10px;
  padding: 10px 20px;
  background-color: #fbbc05;
  color: #fff;
  border: none;
  border-radius: 100%;
  width: 70px;
  height: 70px;
  font-size: 35px;
  cursor: pointer;
}

/* Estilos para o grid das notas */
.grid {
  display: flex;
  justify-content: center;
}

.my-masonry-grid {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin-left: -30px;
  width: auto;
}

.my-masonry-grid_column {
  padding-left: 30px;
  background-clip: padding-box;
}

.my-masonry-grid_column>div {
  background-color: #fff;
  border-radius: 5px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
  padding: 10px 20px;
  margin: 10px;
  cursor: pointer;
  width: 300px;
}

/* Estilos para as notas */
.note h3 {
  display: block;
  text-align: start;
  font-size: 18px;
  margin-bottom: 10px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.note p {
  text-align: start;
  font-size: 16px;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 10;
  -webkit-box-orient: vertical;
  word-wrap: break-word;
}

.note button {
  margin: 10px;
  padding: 10px;
  border: none;
  color: #fff;
  font-size: 20px;
  cursor: pointer;
}

/* Estilos para os botões na lixeira */
.trashCanButtons {
  display: flex;
  justify-content: center;
}

.restore {
  background-color: #4ddf4d;
}

.definitelyDelete {
  background-color: #ff3f3c;
}

/* Estilos para os modais */
.modal-overlay {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.modal-content {
  background-color: #fff;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  padding: 20px;
  width: 400px;
  max-width: 100%;
  position: relative;
}

.modal-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
}

.modal-header button {
  padding: 5px;
  position: absolute;
  top: 10px;
  right: 10px;
  display: flex;
  background-color: red;
  border: none;
  color: #fff;
  cursor: pointer;
}

.modal-header button svg {
  font-size: 20px;
}

.buttons {
  width: 100%;
  display: flex;
  justify-content: center;
}

.buttons button {
  margin: 10px;
  padding: 10px;
  border: none;
  background-color: #fbbc05;
  color: #fff;
  font-size: 20px;
  cursor: pointer;
}

/* Estilos para os campos de texto */
input[type="text"],
textarea {
  width: 100%;
  padding: 10px;
  font-size: 16px;
  margin-bottom: 10px;
  border: 1px solid #ccc;
  border-radius: 3px;
  box-sizing: border-box;
}

textarea {
  height: 100px;
  resize: none;
  overflow-y: auto;
  font-family: Arial, sans-serif;
}

textarea::-webkit-scrollbar {
  width: 8px;
  background-color: #f5f5f5;
}

textarea::-webkit-scrollbar-thumb {
  background-color: #888;
  border-radius: 5px;
}

textarea::-webkit-scrollbar-thumb:hover {
  background-color: #555;
  cursor: pointer;
}

